--- a/apps/amcm/templates/amcm/reporte-cuota.html
+++ b/apps/amcm/templates/amcm/reporte-cuota.html
@@ -19,7 +19,7 @@
             </nav>
           </div>
           <div class="col-lg-6 col-5 text-right">
-            <a href="#" class="btn btn-sm btn-neutral"><i class="far fa-file-alt"></i> Descargar</a>
+            <a href="/amcm/reporte-cuota-pdf/?id={{ evento.id }}" class="btn btn-sm btn-neutral"><i class="far fa-file-alt"></i> Descargar</a>
 {#            <a href="#" class="btn btn-sm btn-neutral">Filters</a>#}
           </div>
         </div>
@@ -137,6 +137,7 @@
                     </tr>
                   </thead>
                  <tbody class="list">
+{#                 {{ obj.ejemplares }}#}
               {% for ejemplar_obj in obj.ejemplares %}
                 <tr>
                   <th scope="row">
@@ -150,13 +151,17 @@
                   <td class="budget">
                       {{ ejemplar_obj.ejemplar.nombre }}
                   </td>
-                  <td class="budget" style="text-align: left">
+
+
                       {% for cuota_cuotas in ejemplar_obj.cuotas %}
+                        <td class="budget" style="text-align: left">
                           {% for recibo_obj in cuota_cuotas.recibo %}
+
                               {{ recibo_obj.numero_recibo }}
                           {% endfor %}
+                           </td>
                       {% endfor %}
-                  </td>
+
               {% endfor %}
           </tr>
 
