--- a/apps/static/assets/css/custom.css
+++ b/apps/static/assets/css/custom.css
@@ -53,11 +53,14 @@ td>p{
     margin-bottom: 12px;
 }
 
-.datetimeshortcuts{
-        position: absolute;
-    right: 28px;
-    top: 40px;
-}
-.inline-group .tabular tr.has_original td {
-    position: relative;
-}
+/*.datetimeshortcuts{*/
+/*        position: absolute;*/
+/*    right: 28px;*/
+/*    top: 40px;*/
+/*}*/
+/*.inline-group .tabular tr.has_original td {*/
+/*    position: relative;*/
+/*}*/
+/*.inline-group .tabular tr td {*/
+/*    position: relative;*/
+/*}*/
