fix urls , se ajustan al estandar get y uso de _ en archivos

--- a/apps/amcm/templates/amcm/reporte.html
+++ b/apps/amcm/templates/amcm/reporte.html
@@ -43,7 +43,7 @@
                                 <th>Eliminatoria</th>
                                 <th>Final</th>
                                 <th>Cuotas</th>
-                                <th></th>
+                                <th>...</th>
                             </tr>
                             </thead>
 
@@ -88,9 +88,9 @@
                                                 <i class="fas fa-ellipsis-v"></i>
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                                <a class="dropdown-item" href="#">Action</a>
-                                                <a class="dropdown-item" href="#">Another action</a>
-                                                <a class="dropdown-item" href="#">Something else here</a>
+                                                <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado/?id={{ obj.id }}"><i class="far fa-list-alt"></i>Acumulado</a>
+                                                <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Acumulado</a>
+                                                <a class="dropdown-item" href="/amcm/get_reporte_cuota_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Cuotas</a>
                                             </div>
                                         </div>
                                     </td>
@@ -223,7 +223,7 @@
                                 <th>Eliminatoria</th>
                                 <th>Final</th>
                                 <th>Cuotas</th>
-                                <th></th>
+                                <th>...</th>
                             </tr>
                             </thead>
 
@@ -263,9 +263,9 @@
                                                 <i class="fas fa-ellipsis-v"></i>
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                                <a class="dropdown-item" href="#">Action</a>
-                                                <a class="dropdown-item" href="#">Another action</a>
-                                                <a class="dropdown-item" href="#">Something else here</a>
+                                                <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado/?id={{ obj.id }}"><i class="far fa-list-alt"></i>Acumulado</a>
+                                                <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Acumulado</a>
+                                                <a class="dropdown-item" href="/amcm/get_reporte_cuota_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Cuotas</a>
                                             </div>
                                         </div>
                                     </td>
@@ -369,7 +369,7 @@
                                 <th>Eliminatoria</th>
                                 <th>Final</th>
                                 <th>Cuotas</th>
-                                <th></th>
+                                <th>...</th>
                             </tr>
                             </thead>
 
@@ -409,9 +409,9 @@
                                                 <i class="fas fa-ellipsis-v"></i>
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                                <a class="dropdown-item" href="#">Action</a>
-                                                <a class="dropdown-item" href="#">Another action</a>
-                                                <a class="dropdown-item" href="#">Something else here</a>
+                                                <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado/?id={{ obj.id }}"><i class="far fa-list-alt"></i>Acumulado</a>
+                                                <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Acumulado</a>
+                                                <a class="dropdown-item" href="/amcm/get_reporte_cuota_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Cuotas</a>
                                             </div>
                                         </div>
                                     </td>
