--- a/apps/amcm/templates/amcm/reporte_cuotas_acumulado_pdf.html
+++ b/apps/amcm/templates/amcm/reporte_cuotas_acumulado_pdf.html
@@ -218,72 +218,67 @@
     <br/>
     <br/>
         {#    cuotas #}
-    <table class="table align-items-center">
-        <thead>
-            <tr align="center">
-                <th scope="col" class="sort" data-sort="name" width="50%">&nbsp;</th>
-                    {% for cuota in cuotas %}
-                        <th style="border-width: 1px; border-style: solid; border-color: #0a0c0d; text-align: center; padding-top: 2px; padding-bottom: 2px;">
-                        <span style="text-transform:uppercase;">{{ cuota.tipoCuota }}</span><br/>
-                        {{ cuota.fechaVencimiento|date:"d-m-Y" }} <br/>
-                       $ {{ cuota.monto }} <br/>
-                    </th>
-                    {% endfor %}
-                </tr>
-              </thead>
-              </table>
-        {#    cuadras y ejemplares#}
-         {% for obj in cuadras %}
-
-              <table class="table" width="100%">
-                  <thead class="thead-light">
-                    <tr style="font-size: 10px;line-height: 10px; text-align: left">
-                        <th scope="col" class="sort" data-sort="name" width="5%">
-                           &nbsp;
-                        </th>
-                        <th scope="col" width="45%">{{ obj.cuadra.nombre }}</th>
-                        <th scope="col" >
-                            {{ obj.cuadra.telefono }}
-                        </th>
-                        <th scope="col" colspan="3">
-                            {{ obj.cuadra.representante }}
-                            <br/>
-                            {{ obj.cuadra.correoElectronico }}
-                        </th>
-                    </tr>
-                  </thead>
+{#    <table class="table align-items-center">#}
+{#        <thead>#}
+{#            <tr align="center">#}
+{#                <th scope="col" class="sort" data-sort="name" width="50%">&nbsp;</th>#}
+{#                    {% for cuota in cuotas %}#}
+{#                        <th style="border-width: 1px; border-style: solid; border-color: #0a0c0d; text-align: center; padding-top: 2px; padding-bottom: 2px;">#}
+{#                        <span style="text-transform:uppercase;">{{ cuota.tipoCuota }}</span><br/>#}
+{#                        {{ cuota.fechaVencimiento|date:"d-m-Y" }} <br/>#}
+{#                       $ {{ cuota.monto }} <br/>#}
+{#                    </th>#}
+{#                    {% endfor %}#}
+{#                </tr>#}
+{#              </thead>#}
+{#              </table>#}
+               <table class="table align-items-center" >
+                <thead class="thead-light">
+                    <tr>
+                         <th scope="col">
+                         &nbsp;
+                          </th>
+                          <th scope="col">
+                            CUOTA
+                          </th>
+                          <th scope="col">
+                            NUMERO DE EJEMPLARES
+                          </th>
+                          <th scope="col">
+                              MONTO ACUMULADO
+                          </th>
+                         <th scope="col">
+                         &nbsp;
+                          </th>
+                 </tr>
+                </thead>
                  <tbody class="list">
 {#                {{ obj.ejemplares }}#}
-              {% for ejemplar_obj in obj.ejemplares %}
-                <tr style="border-width: 1px; border-style: solid; border-color: #0a0c0d; text-align: center; padding-top: 2px; padding-bottom: 2px;">
-                  <th scope="col" width="5%">
+              {% for obj in acumulado %}
+                <tr>
+                 <th scope="col">
+                 &nbsp;
 
-                      <div class="media align-items-center">
-                          <div class="media-body" style="padding-left: 10px;">
-                            <span class="name mb-0 text-sm">{{ ejemplar_obj.ejemplar.id }}</span>
-                          </div>
-                      </div>
                   </th>
-                  <td class="budget" width="45%" style="text-align: left; padding-top: 2px; padding-left: 2px; padding-bottom: 2px;">
-                      {{ ejemplar_obj.ejemplar.nombre }}
+                  <th scope="col">
+                    {{ obj.cuota }}
+
+                  </th>
+                  <td scope="col" class="budget">
+                      {{ obj.ejemplares_pago }}
                   </td>
+                  <td scope="col" class="budget">
+                      $ {{ obj.acumulado }}
+                  </td>
+                <th scope="col">
+                 &nbsp;
 
-
-                      {% for cuota_cuotas in ejemplar_obj.cuotas %}
-                        <td scope="col" class="budget" style="text-align: center; padding-top: 2px; padding-left: 2px; padding-bottom: 2px;">
-                        &nbsp;
-                          {% for recibo_obj in cuota_cuotas.recibo %}
-                              {{ recibo_obj.numero_recibo }}
-                          {% endfor %}
-                           </td>
-                      {% endfor %}
-
-              {% endfor %}
-          </tr>
+                  </th>
+                 </tr>
+                  {% endfor %}
 
               </tbody>
               </table>
-            {% endfor %}
 
 
 </div>
