Agregar campo estatus a catálogo de cuentas contables Agregar a modelo de evento un inlines para que definan las cuentas contables del evento Cambiar en modelo  cuentas pago muestre las cuentas  que se definieron en el evento -- se cambia cuentascontables por cuentasevento

--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -48,6 +48,12 @@
                         <div class="collapse" id="navbar-dashboards">
                             <ul class="nav nav-sm flex-column">
                                 <li class="nav-item">
+                                    <a href="/admin/amcm/cuentascontables/" class="nav-link {% if 'index' in segment %} active {% endif %}">
+                                        {#                                        <span class="sidenav-mini-icon"> D </span>#}
+                                        <span class="sidenav-normal"> Cuentas Contables </span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a href="/admin/amcm/descuentos/" class="nav-link {% if 'index' in segment %} active {% endif %}">
                                         {#                                        <span class="sidenav-mini-icon"> D </span>#}
                                         <span class="sidenav-normal"> Descuentos </span>
