Agregar en admin del modelo de Pago el inlines con combo de Tipo de Forma de Pago, Referencia y Monto Agregar en el recibo (x ejemplo VII DERBY DESAFÍO-7) los nombres de los caballos en el recibo y el nombre del evento cuota n  del x evento nombres caballos En el recibo , agregar los valores del inlines de formas de PAgo , referencia y monto Se agrega modelo Elegible, Listado Elegibles Se agrega a modelo de Evento el campo elegibles de Subasta Se agrega al menu elementos

--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -60,6 +60,19 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a href="/admin/amcm/formapago/" class="nav-link {% if 'index' in segment %} active {% endif %}">
+                                        {#                                        <span class="sidenav-mini-icon"> D </span>#}
+                                        <span class="sidenav-normal"> Forma de Pago </span>
+                                    </a>
+                                </li>
+                            <li class="nav-item">
+                                    <a href="/admin/amcm/limite/"
+                                       class="nav-link {% if 'alternative' in segment %} active {% endif %}">
+                                        {#                                        <span class="sidenav-mini-icon"> A </span>#}
+                                        <span class="sidenav-normal"> Tipo de Condición </span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a href="/admin/amcm/tipocuota/"
                                        class="nav-link {% if 'alternative' in segment %} active {% endif %}">
                                         {#                                        <span class="sidenav-mini-icon"> A </span>#}
@@ -71,6 +84,13 @@
                                        class="nav-link {% if 'alternative' in segment %} active {% endif %}">
                                         {#                                        <span class="sidenav-mini-icon"> A </span>#}
                                         <span class="sidenav-normal"> Tipo de Evento </span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/admin/amcm/tipofecha/"
+                                       class="nav-link {% if 'alternative' in segment %} active {% endif %}">
+                                        {#                                        <span class="sidenav-mini-icon"> A </span>#}
+                                        <span class="sidenav-normal"> Tipo de Fecha </span>
                                     </a>
                                 </li>
 {#                                <li class="nav-item">#}
@@ -110,6 +130,13 @@
                         <a class="nav-link {% if 'map' in segment %} active {% endif %}" href="/map.html">
                             <i class="ni ni-circle-08 text-secondary"></i>
                             <span class="nav-link-text">Asistentes</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'map' in segment %} active {% endif %}" href="/admin/amcm/elegible/">
+                            <i class="ni ni-circle-08 text-secondary"></i>
+                            <span class="nav-link-text">Elegibles</span>
                         </a>
                     </li>
                     {#                    <li class="nav-item">#}
